networkpolicy/adminnetworkpolicy.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-teama-to-demoapp
spec:
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: demo-app 
  priority: 50  
  ingress:
    - name: "allow-teama-ingress"
      action: Allow 
      from:
        - pods:
            namespaceSelector:
              matchLabels:
                team: teama
            podSelector: {}
